Fix 404 & index.php problems

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -48,6 +48,8 @@ http {
     	error_log /dev/stdout info;
     	access_log /dev/stdout;
 
+    	include /var/www/html/*.conf;
+
     	error_page 404 /404.html;
     	error_page 500 502 503 504 /50x.html;
 
@@ -74,7 +76,7 @@ http {
     	}
 
     	location / {
-			try_files $uri $uri/ $uri.php;
+			try_files $uri $uri/ $uri.html /index.php?$args; =404;
     	}
 
     	location ~ \.php$ {
@@ -87,6 +89,5 @@ http {
     		fastcgi_param SERVER_NAME       $host;
     		fastcgi_intercept_errors on;
     	}
-    	include /var/www/html/*.conf;
     }
 }
