Fix 404 problems with rewrite

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -48,8 +48,6 @@ http {
     	error_log /dev/stdout info;
     	access_log /dev/stdout;
 
-    	include /var/www/html/*.conf;
-
     	error_page 404 /404.html;
     	error_page 500 502 503 504 /50x.html;
 
@@ -76,7 +74,7 @@ http {
     	}
 
     	location / {
-			try_files $uri $uri/ $uri.html /index.php?$args; =404;
+			try_files $uri $uri/ /index.php?$args;
     	}
 
     	location ~ \.php$ {
