Update nginx and php 5.6

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,87 +5,46 @@ worker_processes 1;
 error_log   /var/log/nginx/error.log warn;
 pid         /var/run/nginx.pid;
 
-daemon off;
-
 events {
     worker_connections 1024;
 }
 
 http {
-    client_max_body_size 108M;
+    # Basic Settings
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+
+    # server_tokens off;
+
+    # server_names_hash_bucket_size 64;
+    # server_name_in_redirect off;
 
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-            '$status $body_bytes_sent "$http_referer" '
-            '"$http_user_agent" "$http_x_forwarded_for"';
+    # Logging Settings
+    log_format gzip '$remote_addr - $remote_user [$time_local]  '
+          '"$request" $status $bytes_sent '
+          '"$http_referer" "$http_user_agent" "$gzip_ratio"';
 
-    access_log /var/log/nginx/access.log main;
+    access_log /var/log/nginx/access.log gzip buffer=32k;
+    error_log /var/log/nginx/error.log notice;
 
-    sendfile on;
-
-    keepalive_timeout 65;
-
+    # Gzip Settings
     gzip on;
+    gzip_disable "msie6";
 
-    index index.php index.htm index.html;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
+    # Virtual Host Configs
     include /etc/nginx/conf.d/*.conf;
-
-    server {
-    	listen   80; ## listen for ipv4; this line is default and implied
-    	listen   [::]:80 default ipv6only=on; ## listen for ipv6
-
-    	send_timeout 20;
-
-    	sendfile off;
-
-    	charset UTF-8;
-
-    	root /var/www/html;
-
-    	error_log /dev/stdout info;
-    	access_log /dev/stdout;
-
-    	error_page 404 /404.html;
-    	error_page 500 502 503 504 /50x.html;
-
-    	location = /404.html {
-    		root   /usr/local/nginx/html;
-    		internal;
-    	}
-
-    	location = /50x.html {
-    		root   /usr/local/nginx/html;
-    		internal;
-    	}
-
-    	location = /favicon.ico { access_log off; log_not_found off; }
-    	location = /robots.txt  { allow all; access_log off; log_not_found off; }
-
-    	location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-    		expires 14d;
-    	}
-
-    	location ~ /\. {
-    		log_not_found off;
-    		deny all;
-    	}
-
-    	location / {
-			try_files $uri $uri/ /index.php?$args;
-    	}
-
-    	location ~ \.php$ {
-    		try_files $uri =404;
-    		include fastcgi_params;
-    		fastcgi_pass php-fpm:9000;
-    		fastcgi_index index.php;
-    		fastcgi_param SCRIPT_FILENAME   $document_root$fastcgi_script_name;
-    		fastcgi_param PATH_INFO         $fastcgi_path_info;
-    		fastcgi_param SERVER_NAME       $host;
-    		fastcgi_intercept_errors on;
-    	}
-    }
+    include /etc/nginx/sites-enabled/*;
 }
