--- a/fpm/5.6/Dockerfile
+++ b/fpm/5.6/Dockerfile
@@ -1,13 +1,10 @@
-FROM phpdockerio/php56-fpm:latest
+FROM php:5.6-fpm
+MAINTAINER Ronan Pozzi <contact@treenity-web.fr>
 
-# Install selected extensions and other stuff
 RUN apt-get update \
     && apt-get -y --no-install-recommends install  php5-memcached php5-mysql php5-gd php5-imagick php5-memcache php5-tidy php5-twig php5-xdebug php5-xhprof \
-    && php5-curl php5-readline \
-    && php5-bcmath php5-intl php5-mcrypt php5-xml php5-soap php5-xsl php5-zip\
+    && php5-curl php5-readline php5-bcmath php5-intl php5-mcrypt php5-xml php5-soap php5-xsl php5-zip \
     && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
-
-COPY ./php-ini-overrides.ini /etc/php5/fpm/conf.d/99-overrides.ini
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
@@ -15,6 +12,6 @@ RUN version=$(php -r "echo PHP_MAJOR_VERSION.PHP_MINOR_VERSION;") \
     && curl -A "Docker" -o /tmp/blackfire-probe.tar.gz -D - -L -s https://blackfire.io/api/v1/releases/probe/php/linux/amd64/$version \
     && tar zxpf /tmp/blackfire-probe.tar.gz -C /tmp \
     && mv /tmp/blackfire-*.so $(php -r "echo ini_get('extension_dir');")/blackfire.so \
-    && printf "extension=blackfire.so\nblackfire.agent_socket=tcp://blackfire:8707\n" > /etc/php5/fpm/conf.d/20-blackfire.ini
+    && printf "extension=blackfire.so\nblackfire.agent_socket=tcp://blackfire:8707\n" > $PHP_INI_DIR/conf.d/20-blackfire.ini
 
-WORKDIR "/var/www/html"
+COPY ./php-ini-overrides.ini $PHP_INI_DIR/conf.d/99-overrides.ini
