--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -30,10 +30,11 @@ server {
     }
 
     location / {
-        try_files $uri $uri/ /index.php?$args =404;
+        try_files $uri $uri/ /index.php?$args;
     }
 
     location ~ \.php$ {
+        try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
