--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,8 +1,7 @@
 server {
     listen 80;
-    listen [::]:80 default_server ipv6only=on;
 
-    server_name local.dev;
+    server_name default_server;
 
     root /var/www/html;
     index index.php index.html index.htm;
@@ -12,9 +11,6 @@ server {
     sendfile off;
 
     charset UTF-8;
-
-    error_log /dev/stdout debug;
-    access_log /dev/stdout;
 
     error_page 404 /404.html;
     error_page 500 502 503 504 /50x.html;
@@ -36,11 +32,10 @@ server {
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        include fastcgi_params;
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
-        include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
     location ~ /\. {
@@ -48,3 +43,5 @@ server {
         deny all;
     }
 }
+
+include /etc/nginx/sites-enabled/*;
