--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -4,7 +4,7 @@ server {
     server_name default_server;
 
     root /var/www/html;
-    index index.php index.html index.htm;
+    index index.html index.htm index.php;
 
     send_timeout 20;
 
