--- a/fpm/5.6/Dockerfile
+++ b/fpm/5.6/Dockerfile
@@ -12,6 +12,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update -q \
         php5-xdebug \
         php5-xhprof \
         php5-memcached \
+        memcached \
         php5-memcache \
     && docker-php-ext-install iconv mcrypt \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
