--- a/apache/sites-available/000-default.conf
+++ b/apache/sites-available/000-default.conf
@@ -1,15 +1,17 @@
 <VirtualHost *:80>
 	DocumentRoot /var/www/html
-	ServerName local.dev
+	ServerName localhost
+	ServerSignature Off
 
 	<Directory /var/www/html>
-        Options Indexes FollowSymLinks
-        AllowOverride All
+        Options +FollowSymLinks +ExecCGI +Includes
+		AllowOverride All
+		Require all granted
     </Directory>
 
-    <LocationMatch "^/(.*\.php(/.*)?)$">
-        ProxyPass fcgi://php-fpm:9000/var/www/html/$1
-    </LocationMatch>
+    <FilesMatch \.php$>
+     SetHandler "proxy:fcgi://php-fpm:9000"
+    </FilesMatch>
 
     # Directory indexes
     <IfModule dir_module>
