--- a/fpm/7.0/php-ini-overrides.ini
+++ b/fpm/7.0/php-ini-overrides.ini
@@ -1,3 +1,4 @@
+cgi.fix_pathinfo = 0;
 memory_limit  = 256M
 upload_max_filesize = 512M
 post_max_size = 520M
@@ -5,6 +6,7 @@ error_reporting = E_ALL
 display_errors = On
 date.timezone = UTC
 max_input_vars = 3000
+always_populate_raw_post_data=-1
 
 xdebug.remote_enable = off
 xdebug.profiler_enable = off
