--- a/fpm/7.1/php-ini-overrides.ini
+++ b/fpm/7.1/php-ini-overrides.ini
@@ -1,12 +1,20 @@
 cgi.fix_pathinfo = 0;
-memory_limit  = 256M
+memory_limit  = 512M
 upload_max_filesize = 512M
-post_max_size = 520M
+post_max_size = 512M
 error_reporting = E_ALL
 display_errors = On
 date.timezone = UTC
 max_input_vars = 3000
 always_populate_raw_post_data=-1
 
+
+[Xdebug]
 xdebug.remote_enable = off
 xdebug.profiler_enable = off
+xdebug.show_local_vars = On
+xdebug.profiler_enable_trigger = On
+; PHPSTORM download Remote call Plugin (https://plugins.jetbrains.com/plugin/6027)
+xdebug.file_link_format = "http://localhost:8091?message=%f:%l"
+xdebug.dump.SERVER = HTTP_HOST, SERVER_NAME
+xdebug.dump.GET=*
