update with /phpmyadmin /dockerui /mailhog

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,7 +1,11 @@
 server {
+    listen [::]:80;
     listen 80;
 
     server_name default_server;
+
+    access_log /dev/stdout main;
+    error_log /dev/stderr info;
 
     root /var/www/html;
     index index.html index.htm index.php;
@@ -12,8 +16,11 @@ server {
 
     charset UTF-8;
 
-    error_page 404 /404.html;
+    error_page 404 /usr/share/nginx/html/404.html;
     error_page 500 502 503 504 /50x.html;
+
+    client_max_body_size 512M;
+
     location = /50x.html {
         root /usr/share/nginx/html;
     }
@@ -21,8 +28,22 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { allow all; access_log off; log_not_found off; }
 
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-        expires 14d;
+    location ~ ^/mailhog(?:/(.*))?$ {
+        proxy_pass http://mailhog/$1;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+    }
+
+    location ~ ^/docker(?:/(.*))?$ {
+        proxy_pass http://dockerui/$1;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
+    location ~ ^/phpmyadmin(?:/(.*))?$ {
+        proxy_pass http://phpmyadmin/$1;
     }
 
     location / {
@@ -33,9 +54,14 @@ server {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         include fastcgi_params;
-        fastcgi_pass php-fpm:9000;
+        fastcgi_pass php-fpm;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_max_temp_file_size 0;
+    }
+
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+        expires 14d;
     }
 
     location ~ /\. {
@@ -43,5 +69,3 @@ server {
         deny all;
     }
 }
-
-include /etc/nginx/sites-enabled/*;
