--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,15 @@ services:
       ports:
         - "8081:8025"
 
+  dockerui:
+      image: uifd/ui-for-docker
+      restart: always
+      privileged: true
+      volumes:
+        - /var/run/docker.sock:/var/run/docker.sock
+      ports:
+        - 8082:9000
+
   #blackfire:
       #image: blackfire/blackfire
       #environment:
