--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -35,7 +35,7 @@ server {
         proxy_set_header Connection $connection_upgrade;
     }
 
-    location ~ ^/docker(?:/(.*))?$ {
+    location ~ ^/dockerui(?:/(.*))?$ {
         proxy_pass http://dockerui/$1;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
