--- a/fpm/7.1/php-ini-overrides.ini
+++ b/fpm/7.1/php-ini-overrides.ini
@@ -10,11 +10,11 @@ always_populate_raw_post_data=-1
 
 
 [Xdebug]
-xdebug.remote_enable = off
-xdebug.profiler_enable = off
-xdebug.show_local_vars = On
+xdebug.remote_enable = Off
+xdebug.profiler_enable = Off
+xdebug.show_local_vars = Off
 xdebug.profiler_enable_trigger = On
 ; PHPSTORM download Remote call Plugin (https://plugins.jetbrains.com/plugin/6027)
 xdebug.file_link_format = "http://localhost:8091?message=%f:%l"
-xdebug.dump.SERVER = HTTP_HOST, SERVER_NAME
-xdebug.dump.GET=*
+#xdebug.dump.SERVER = HTTP_HOST, SERVER_NAME
+#xdebug.dump.GET=*
