--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,7 +2,7 @@ server {
     listen [::]:80;
     listen 80;
 
-    server_name default_server;
+    server_name local.dev;
 
     access_log /dev/stdout main;
     error_log /dev/stderr info;
