--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -7,3 +7,5 @@ COPY conf.d/proxy.conf /etc/nginx/conf.d/proxy.conf
 COPY conf.d/gzip.conf /etc/nginx/conf.d/gzip.conf
 COPY conf.d/upstream.conf /etc/nginx/conf.d/upstream.conf
 COPY conf.d/default.conf /etc/nginx/conf.d/default.conf
+
+WORKDIR /var/www/html
