--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -28,24 +28,18 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { allow all; access_log off; log_not_found off; }
 
-    location /mailhog {
-        rewrite              /mailhog/(.*) /$1 break;
-        proxy_http_version   1.1;
-        proxy_set_header     Connection "";
-        proxy_redirect       off;
-        proxy_set_header     Host $host;
-        proxy_set_header     X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass           http://mailhog;
+    location ~ ^/mailhog(?:/(.*))?$ {
+        proxy_pass http://mailhog/$1;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
     }
 
-    location /dockerui {
-        rewrite              /dockerui/(.*) /$1 break;
-        proxy_http_version   1.1;
-        proxy_set_header     Connection "";
-        proxy_redirect       off;
-        proxy_set_header     Host $host;
-        proxy_set_header     X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass           http://dockerui;
+    location ~ ^/dockerui(?:/(.*))?$ {
+        proxy_pass http://dockerui/$1;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 
     location ~ ^/phpmyadmin(?:/(.*))?$ {
