--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -30,22 +30,26 @@ server {
 
     location ~ ^/mailhog(?:/(.*))?$ {
         proxy_pass http://mailhog/$1;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
+        proxy_http_version   1.1;
+		proxy_set_header     Connection "";
+		proxy_redirect       off;
+		proxy_set_header     Host $host;
+		proxy_set_header     X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     location ~ ^/dockerui(?:/(.*))?$ {
         proxy_pass http://dockerui/$1;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_http_version   1.1;
+		proxy_set_header     Connection "";
+		proxy_redirect       off;
+		proxy_set_header     Host $host;
+		proxy_set_header     X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     location ~ ^/phpmyadmin(?:/(.*))?$ {
         proxy_pass http://phpmyadmin/$1;
     }
-    
+
     include /var/www/html/*.conf;
 
     location / {
