--- a/fpm/7.1/php-ini-overrides.ini
+++ b/fpm/7.1/php-ini-overrides.ini
@@ -18,3 +18,11 @@ xdebug.profiler_enable_trigger = On
 xdebug.file_link_format = "http://localhost:8091?message=%f:%l"
 #xdebug.dump.SERVER = HTTP_HOST, SERVER_NAME
 #xdebug.dump.GET=*
+
+[php-fpm-pool-settings]
+pm = dynamic
+pm.max_children = 25
+pm.start_servers = 10
+pm.min_spare_servers = 5
+pm.max_spare_servers = 20
+pm.max_requests = 498
