--- a/fpm/7.1/php-ini-overrides.ini
+++ b/fpm/7.1/php-ini-overrides.ini
@@ -1,6 +1,7 @@
 cgi.fix_pathinfo = 0;
 max_input_vars = 3000
 always_populate_raw_post_data=-1
+sendmail_path = "/usr/sbin/ssmtp -t"
 
 [Xdebug]
 xdebug.remote_enable = Off
