--- a/fpm/5.6/php-ini-overrides.ini
+++ b/fpm/5.6/php-ini-overrides.ini
@@ -1,6 +1,15 @@
 cgi.fix_pathinfo = 0;
+memory_limit  = 512M
+upload_max_filesize = 512M
+post_max_size = 512M
+max_file_uploads  = 512M
+error_reporting = -1
+display_errors = On
+display_startup_errors  = On
+date.timezone = UTC
 max_input_vars = 3000
 always_populate_raw_post_data=-1
+short_open_tag = On
 sendmail_path = "/usr/sbin/ssmtp -t"
 
 [Xdebug]
