Add error_reporting E_ALL

--- a/fpm/7.0/php-ini-overrides.ini
+++ b/fpm/7.0/php-ini-overrides.ini
@@ -2,6 +2,7 @@ cgi.fix_pathinfo = 0;
 max_input_vars = 3000
 always_populate_raw_post_data=-1
 sendmail_path = "/usr/sbin/ssmtp -t"
+error_reporting = E_ALL
 
 [Xdebug]
 xdebug.remote_enable = Off
