--- a/fpm/5.6/php-ini-overrides.ini
+++ b/fpm/5.6/php-ini-overrides.ini
@@ -3,7 +3,7 @@ memory_limit  = 512M
 upload_max_filesize = 512M
 post_max_size = 512M
 max_file_uploads  = 512M
-error_reporting = -1
+error_reporting = E_ALL
 display_errors = On
 display_startup_errors  = On
 date.timezone = UTC
