--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,11 @@ services:
         - 3306:3306
 
   webserver:
+#if ($USE_NGINX != '')
       image: treenity/nginx
+#else
+      image: treenity/apache
+#end
       volumes_from:
         - php-fpm
       ports:
@@ -21,7 +25,11 @@ services:
         - 443:443
 
   php-fpm:
+#if ($PHP_VERSION != '')
+      image: treenity/php:$PHP_VERSION
+#else
       image: treenity/php:7.0
+#end
       volumes:
         - ./:/var/www/html
         #- ./.docker/php-ini-overrides.ini:/etc/php/7.0/fpm/conf.d/99-overrides.ini
@@ -59,11 +67,12 @@ services:
         - /var/run/docker.sock:/var/run/docker.sock
       ports:
         - 8082:9000
-
-  #blackfire:
-      #image: blackfire/blackfire
-      #environment:
-        #BLACKFIRE_CLIENT_ID: XXX
-        #BLACKFIRE_CLIENT_TOKEN: XXX
-        #BLACKFIRE_SERVER_ID: XXX
-        #BLACKFIRE_SERVER_TOKEN: XXX
+#if ($USE_BLACKFIRE != '')
+  blackfire:
+    image: blackfire/blackfire
+    environment:
+      BLACKFIRE_CLIENT_ID: YOUR_BLACKFIRE_CLIENT_ID
+      BLACKFIRE_CLIENT_TOKEN: YOUR_BLACKFIRE_CLIENT_TOKEN
+      BLACKFIRE_SERVER_ID: YOUR_BLACKFIRE_SERVER_ID
+      BLACKFIRE_SERVER_TOKEN: YOUR_BLACKFIRE_SERVER_TOKEN
+#end
