--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -28,28 +28,6 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { allow all; access_log off; log_not_found off; }
 
-    location ~ ^/mailhog(?:/(.*))?$ {
-        proxy_pass http://mailhog/$1;
-        proxy_http_version   1.1;
-		proxy_set_header     Connection "";
-		proxy_redirect       off;
-		proxy_set_header     Host $host;
-		proxy_set_header     X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    location ~ ^/dockerui(?:/(.*))?$ {
-        proxy_pass http://dockerui/$1;
-        proxy_http_version   1.1;
-		proxy_set_header     Connection "";
-		proxy_redirect       off;
-		proxy_set_header     Host $host;
-		proxy_set_header     X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    location ~ ^/phpmyadmin(?:/(.*))?$ {
-        proxy_pass http://phpmyadmin/$1;
-    }
-
     include /var/www/html/*.conf;
 
     location / {
@@ -60,7 +38,7 @@ server {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         include fastcgi_params;
-        fastcgi_pass php-fpm;
+        fastcgi_pass http://php-fpm:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_max_temp_file_size 0;
