--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -38,7 +38,7 @@ server {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         include fastcgi_params;
-        fastcgi_pass http://php-fpm:9000;
+        fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_max_temp_file_size 0;
