--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -41,6 +41,7 @@ server {
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_max_temp_file_size 0;
     }
 
