--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,8 +1,5 @@
 server {
-    listen [::]:80;
-    listen 80;
-
-    server_name local.dev;
+    listen 80 default_server;
 
     access_log /dev/stdout main;
     error_log /dev/stderr info;
