--- a/nginx/conf.d/mysite.template
+++ b/nginx/conf.d/mysite.template
@@ -1,5 +1,7 @@
 server {
-    listen 80 default_server;
+    listen ${NGINX_PORT};
+
+    server_name ${NGINX_HOST};
 
     access_log /dev/stdout main;
     error_log /dev/stderr info;
@@ -28,17 +30,17 @@ server {
     include /var/www/html/*.conf;
 
     location / {
-        try_files $uri $uri/ /index.php?$args;
+        try_files ${DOLLAR}uri /${DOLLAR}uri /index.php?${DOLLAR}args;
     }
 
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    location ~ \.php${DOLLAR} {
+        try_files ${DOLLAR}uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)${DOLLAR};
         include fastcgi_params;
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param SCRIPT_FILENAME ${DOLLAR}document_root${DOLLAR}fastcgi_script_name;
+        fastcgi_param PATH_INFO ${DOLLAR}fastcgi_path_info;
     }
 
     location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
