--- a/nginx/conf.d/mysite.template
+++ b/nginx/conf.d/mysite.template
@@ -7,7 +7,8 @@ server {
     error_log /dev/stderr info;
 
     root /var/www/html;
-    index index.html index.htm index.php;
+
+    index index.php index.html index.htm;
 
     send_timeout 20;
 
@@ -30,17 +31,19 @@ server {
     include /var/www/html/*.conf;
 
     location / {
-        try_files ${DOLLAR}uri ${DOLLAR}uri/ /index.php?${DOLLAR}args;
+        proxy_redirect false;
+        try_files ${DOLLAR}uri ${DOLLAR}uri/ /index.php${DOLLAR}is_args${DOLLAR}args;
     }
 
     location ~ \.php${DOLLAR} {
-        try_files ${DOLLAR}uri =404;
+        if (!-e ${DOLLAR}request_filename) { rewrite / /index.php last; } ## Catch 404s that try_files miss
         fastcgi_split_path_info ^(.+\.php)(/.+)${DOLLAR};
         include fastcgi_params;
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME ${DOLLAR}document_root${DOLLAR}fastcgi_script_name;
         fastcgi_param PATH_INFO ${DOLLAR}fastcgi_path_info;
+        fastcgi_intercept_errors on;
     }
 
     location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
