--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       environment:
         NGINX_HOST: 192.168.99.100
         NGINX_PORT: 80
-      command: /bin/bash -c "DOLLAR=$$ envsubst < /etc/nginx/conf.d/mysite.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+      command: /bin/bash -c "envsubst '\\$$NGINX_HOST \\$$NGINX_PORT' < /etc/nginx/conf.d/mysite.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
 
   php-fpm:
 #if ($PHP_VERSION != '')
