--- a/nginx/conf.d/mysite.template
+++ b/nginx/conf.d/mysite.template
@@ -2,6 +2,8 @@ server {
     listen ${NGINX_PORT};
 
     server_name ${NGINX_HOST};
+    server_name_in_redirect off;
+    fastcgi_intercept_errors on;
 
     access_log /dev/stdout main;
     error_log /dev/stderr info;
@@ -16,7 +18,7 @@ server {
 
     charset UTF-8;
 
-    error_page 404 /usr/share/nginx/html/404.html;
+    error_page 403 404 /index.php;
     error_page 500 502 503 504 /50x.html;
 
     client_max_body_size 512M;
@@ -41,7 +43,7 @@ server {
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
-        fastcgi_intercept_errors on;
+        fastcgi_read_timeout 600;
     }
 
     location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
