--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,18 +22,21 @@ services:
       volumes_from:
         - php-fpm
       ports:
+#if ($NGINX_PORT != '')
+        - $NGINX_PORT:80
+#else
         - 80:80
-        - 443:443
+#end
       environment:
 #if ($NGINX_HOST != '')
-		NGINX_HOST: $NGINX_HOST
+        NGINX_HOST: $NGINX_HOST
 #else
-		NGINX_HOST: 192.168.99.100
+        NGINX_HOST: 192.168.99.100
 #end
 #if ($NGINX_PORT != '')
-		NGINX_PORT: $NGINX_PORT
+        NGINX_PORT: $NGINX_PORT
 #else
-		NGINX_PORT: 80
+        NGINX_PORT: 80
 #end
       command: /bin/bash -c "envsubst '\\${DOLLAR}${DOLLAR}NGINX_HOST \\${DOLLAR}${DOLLAR}NGINX_PORT' < /etc/nginx/conf.d/mysite.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
       
@@ -80,15 +83,15 @@ services:
         - /var/run/docker.sock:/var/run/docker.sock
       ports:
         - 8082:9000
-
+        
 #if ($USE_BLACKFIRE != '' && $USE_BLACKFIRE != 'n')
   blackfire:
-    image: blackfire/blackfire
-    environment:
-      BLACKFIRE_CLIENT_ID: YOUR_BLACKFIRE_CLIENT_ID
-      BLACKFIRE_CLIENT_TOKEN: YOUR_BLACKFIRE_CLIENT_TOKEN
-      BLACKFIRE_SERVER_ID: YOUR_BLACKFIRE_SERVER_ID
-      BLACKFIRE_SERVER_TOKEN: YOUR_BLACKFIRE_SERVER_TOKEN
+      image: blackfire/blackfire
+      environment:
+        BLACKFIRE_CLIENT_ID: 74293842-4c71-4dd4-86e0-258f1c99b666
+        BLACKFIRE_CLIENT_TOKEN: d9056ae4eb3480a1137e0fa593dc37f7da0bed77c7b86f50ec49f7dffd7a0a84
+        BLACKFIRE_SERVER_ID: c4b3be3a-7aca-4c04-be7f-5005e7668fb5
+        BLACKFIRE_SERVER_TOKEN: cff08d8f7d76145db92d164ac708c0ba1f9c0b173ff497768813ce01390dbcd1
 
 #end
 volumes:
