Add volume declaration

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,6 +4,8 @@ MAINTAINER Ronan Pozzi <contact@treenity-web.fr>
 
 COPY conf.d /etc/nginx/conf.d
 
-WORKDIR /var/www/html
+VOLUME ['/var/www/html']
 
 RUN usermod -u 1000 www-data
+
+WORKDIR "/var/www/html"
