--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
 #else
         - 80:80
 #end
+#if ($USE_NGINX != '' && $USE_NGINX != 'n')
       environment:
 #if ($NGINX_HOST != '')
         NGINX_HOST: $NGINX_HOST
@@ -39,7 +40,8 @@ services:
         NGINX_PORT: 80
 #end
       command: /bin/bash -c "envsubst '\\${DOLLAR}${DOLLAR}NGINX_HOST \\${DOLLAR}${DOLLAR}NGINX_PORT' < /etc/nginx/conf.d/mysite.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
-      
+#end
+
   php-fpm:
 #if ($PHP_VERSION != '')
       image: treenity/php:$PHP_VERSION
@@ -84,16 +86,6 @@ services:
       ports:
         - 8082:9000
         
-#if ($USE_BLACKFIRE != '' && $USE_BLACKFIRE != 'n')
-  blackfire:
-      image: blackfire/blackfire
-      environment:
-        BLACKFIRE_CLIENT_ID: 74293842-4c71-4dd4-86e0-258f1c99b666
-        BLACKFIRE_CLIENT_TOKEN: d9056ae4eb3480a1137e0fa593dc37f7da0bed77c7b86f50ec49f7dffd7a0a84
-        BLACKFIRE_SERVER_ID: c4b3be3a-7aca-4c04-be7f-5005e7668fb5
-        BLACKFIRE_SERVER_TOKEN: cff08d8f7d76145db92d164ac708c0ba1f9c0b173ff497768813ce01390dbcd1
-
-#end
 volumes:
   mysql_datas:
     driver: local
