--- a/fpm/7.1/Dockerfile
+++ b/fpm/7.1/Dockerfile
@@ -13,6 +13,7 @@ RUN apt-get update \
     && apt-get -y --no-install-recommends install ssmtp curl openssl ca-certificates php-memcached \
     && php7.1-mysql php7.1-gd php7.1-mbstring php7.1-tidy php7.1-curl php7.1-readline \
     && php7.1-bcmath php7.1-intl php7.1-mcrypt php7.1-xml php7.1-soap php7.1-xsl php7.1-zip \
+    && php7.1-pgsql php-redis \
     && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
 # Install Composer
