--- a/fpm/5.6/Dockerfile
+++ b/fpm/5.6/Dockerfile
@@ -24,7 +24,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update -q \
         memcached \
         php5-memcache \
         ssmtp \
-        soap \
+        php-soap \
     && docker-php-ext-install iconv mcrypt \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install gd \
