--- a/fpm/5.6/Dockerfile
+++ b/fpm/5.6/Dockerfile
@@ -25,11 +25,11 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update -q \
         php5-memcache \
         ssmtp \
         php-soap \
-        zip \
         git \
     && docker-php-ext-install iconv mcrypt \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install gd \
+    && docker-php-ext-install zip \
     && docker-php-ext-install curl \
     && docker-php-ext-install mysqli \
     && docker-php-ext-install pdo_mysql \
